--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <th>時間</th>
             <th>地點</th>
             <th>營隊老師電話</th>
+        <tr>
+            <td>7/03(一) - 8/04(五)</td>
+            <td>Roblox程式營</td>
+            <td>早上09:00-下午17:00</td>
+            <td>小學霸總部 (台北市忠孝東路三段136號12 F)</td>
+            <td></td>
+        </tr>
         </tr>
         <tr>
             <td>8/07(一) - 8/11(五)</td>
