--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <th>地點</th>
         <tr>
             <td>7/03(一) - 8/04(五)</td>
-            <td>Roblox程式營</td>
+            <td>何嘉仁暑假營隊</td>
             <td>早上09:00-下午17:00</td>
-            <td>小學霸總部 (台北市忠孝東路三段136號12 F)</td>
+            <td>新南分校</td>
             <td></td>
         </tr>
         </tr>
@@ -43,7 +43,7 @@
             <td>8/07(一) - 8/11(五)</td>
             <td>Roblox程式營</td>
             <td>早上09:00-下午17:00</td>
-            <td>小學霸總部 (台北市忠孝東路三段136號12 F)</td>
+            <td>小學霸總部 新生命小組  (台北市仁愛路四段99號B2)仁愛圓環</td>
             <td></td>
         </tr>
         <tr>
@@ -62,7 +62,7 @@
             <td>8/28(一) - 8/29(二)</td>
             <td>科技AI創客營</td>
             <td>早上09:00-下午17:00</td>
-            <td>小學霸總部 (台北市忠孝東路三段136號12 F)</td>
+            <td>小學霸總部 新生命小組  (台北市仁愛路四段99號B2)仁愛圓環</td>
             <td></td>
         </tr>
     </table>
